# simputils

./: README.md  setup.cfg  setup.py
.github/workflows/: create-release.yml  python-publish.yml
utils/: algos.py  caching.py  dateutils.py  functional.py  math.py
