[metadata]
name = simputils
version = v0.1
author = Mattias De Charleroy
author_email = mattias.decharleroy@gmail.com
url = https://github.com/MattiasDC/simputils
platform = any

[options]
python_requires = >= 3.9
packages = find:
install_requires =
    aiocache
	more-itertools
    rich

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
dev =
    black
    flake8
    isort
    nox
    pre-commit
    twine
    yamllint
    wheel

[flake8]
max-line-length = 88
exclude =
    .env
    .nox
    *.egg-info
    build

[isort]
profile = black
skip =
    .env
    .nox
    *.egg-info
    build